Better parallelism on MS-Windows for "make info".
 nt/makefile.w32-in (emacs, misc, lispref, lispintro): New targets,
 each runs makeinfo in its own subdirectory of 'doc'.
 (info-gmake): Depend on these new targets.

--- a/nt/makefile.w32-in
+++ b/nt/makefile.w32-in
@@ -307,11 +307,11 @@ info-nmake:
 	$(MAKE) $(MFLAGS) info
 	cd $(MAKEDIR)
 
-info-gmake:
-	$(MAKE) $(MFLAGS) $(XMFLAGS) -C ../doc/emacs info
-	$(MAKE) $(MFLAGS) $(XMFLAGS) -C ../doc/misc info
-	$(MAKE) $(MFLAGS) $(XMFLAGS) -C ../doc/lispref info
-	$(MAKE) $(MFLAGS) $(XMFLAGS) -C ../doc/lispintro info
+info-gmake: emacs misc lispref lispintro
+
+emacs misc lispref lispintro:
+	$(MAKE) $(MFLAGS) $(XMFLAGS) -C ../doc/$@ info
+
 #
 # Maintenance
 #
