* configure.in: Warn that Cygwin 1.5 is unsupported.  (Bug#10398)

--- a/configure.in
+++ b/configure.in
@@ -3800,6 +3800,13 @@ to run if these resources are not installed."
    echo
 fi
 
+if test "${opsys}" = "cygwin"; then
+  case `uname -r` in
+    1.5.*) AC_MSG_WARN([[building Emacs on Cygwin 1.5 is not supported.]])
+           echo
+	   ;;
+  esac
+fi
 
 # Remove any trailing slashes in these variables.
 [test "${prefix}" != NONE &&
