--- a/doc/misc/Makefile.in
+++ b/doc/misc/Makefile.in
@@ -68,6 +68,7 @@ INFO_TARGETS = \
 	$(infodir)/flymake \
 	$(infodir)/forms \
 	$(infodir)/gnus \
+	$(infodir)/emacs-gnutls \
 	$(infodir)/idlwave \
 	$(infodir)/info \
 	$(infodir)/mairix-el \
@@ -119,6 +120,7 @@ DVI_TARGETS = \
 	flymake.dvi \
 	forms.dvi \
 	gnus.dvi \
+	emacs-gnutls.dvi \
 	idlwave.dvi \
 	info.dvi \
 	mairix-el.dvi \
@@ -170,6 +172,7 @@ PDF_TARGETS = \
 	flymake.pdf \
 	forms.pdf \
 	gnus.pdf \
+	emacs-gnutls.pdf \
 	idlwave.pdf \
 	info.pdf \
 	mairix-el.pdf \
@@ -343,6 +346,15 @@ eieio.dvi: ${srcdir}/eieio.texi
 	$(ENVADD) $(TEXI2DVI) ${srcdir}/eieio.texi
 eieio.pdf: ${srcdir}/eieio.texi
 	$(ENVADD) $(TEXI2PDF) ${srcdir}/eieio.texi
+
+emacs-gnutls : $(infodir)/emacs-gnutls
+$(infodir)/emacs-gnutls: emacs-gnutls.texi
+	$(mkinfodir)
+	cd $(srcdir); $(MAKEINFO) $(MAKEINFO_OPTS) $<
+emacs-gnutls.dvi: ${srcdir}/emacs-gnutls.texi
+	$(ENVADD) $(TEXI2DVI) $<
+emacs-gnutls.pdf: ${srcdir}/emacs-gnutls.texi
+	$(ENVADD) $(TEXI2PDF) $<
 
 emacs-mime : $(infodir)/emacs-mime
 $(infodir)/emacs-mime: emacs-mime.texi
