* configure.in: Remove wrong part of comment.

--- a/configure.in
+++ b/configure.in
@@ -737,7 +737,7 @@ else
   AC_SUBST([WERROR_CFLAGS])
 
   nw="$nw -Waggregate-return"       # anachronistic
-  nw="$nw -Wlong-long"              # C90 is anachronistic (lib/gethrxtime.h)
+  nw="$nw -Wlong-long"              # C90 is anachronistic
   nw="$nw -Wc++-compat"             # We don't care about C++ compilers
   nw="$nw -Wundef"                  # Warns on '#if GNULIB_FOO' etc in gnulib
   nw="$nw -Wtraditional"            # Warns on #elif which we use often
