--- a/Makefile.in
+++ b/Makefile.in
@@ -136,7 +136,7 @@ MAN_PAGES=ctags.1 ebrowse.1 emacs.1 emacsclient.1 etags.1 \
 # system, it is inappropriate to imply that it is part of Emacs.
 infodir=@infodir@
 INFO_FILES=ada-mode auth autotype calc ccmode cl dbus dired-x ebrowse	\
-           ede ediff edt eieio efaq eintr elisp emacs emacs-mime epa erc \
+           ede ediff edt eieio efaq eintr elisp emacs emacs-gnutls emacs-mime epa erc \
 	   ert eshell eudc flymake forms gnus idlwave info mairix-el	\
 	   message mh-e newsticker nxml-mode org pcl-cvs pgg rcirc	\
 	   reftex remember sasl sc semantic ses sieve smtpmail speedbar \
