--- a/Makefile.in
+++ b/Makefile.in
@@ -236,6 +236,11 @@ gamedir=@gamedir@
 # ==================== Utility Programs for the Build ====================
 
 # Allow the user to specify the install program.
+# Note that if the system does not provide a suitable install,
+# configure will use build-aux/install-sh.  Annoyingly, it does
+# not use an absolute path.  So we must take care to always run
+# INSTALL-type commands from the top-level directory.
+# This explains (I think) the cd thisdir seen in several install rules.
 INSTALL = @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_DATA = @INSTALL_DATA@
@@ -621,7 +626,8 @@ install-arch-indep: mkdir info install-etc
 	   for elt in $(INFO_FILES); do \
 	      test "$(HAVE_MAKEINFO)" = "no" && test ! -f $$elt && continue; \
 	      for f in `ls $$elt $$elt-[1-9] $$elt-[1-9][0-9] 2>/dev/null`; do \
-	        ${INSTALL_DATA} $$f $(DESTDIR)${infodir}/$$f; \
+	       (cd $${thisdir}; \
+	        ${INSTALL_DATA} ${srcdir}/info/$$f $(DESTDIR)${infodir}/$$f); \
 	        chmod a+r $(DESTDIR)${infodir}/$$f; \
 	        if [ -n "${GZIP_INFO}" ] && [ -n "${GZIP_PROG}" ]; then \
 	          rm -f $(DESTDIR)${infodir}/$$f.gz; \
@@ -724,9 +730,11 @@ uninstall:
 	  fi ;						\
 	done
 	-rm -rf $(DESTDIR)${libexecdir}/emacs/${version}
+	thisdir=`/bin/pwd`; \
 	(cd $(DESTDIR)${infodir} && \
 	  for elt in $(INFO_FILES); do \
-	    $(INSTALL_INFO) --remove --info-dir=. $$elt; \
+	    (cd $${thisdir}; \
+	     $(INSTALL_INFO) --remove --info-dir=$(DESTDIR)${infodir} $(DESTDIR)${infodir}/$$elt); \
 	    if [ -n "${GZIP_INFO}" ] && [ -n "${GZIP_PROG}" ]; then \
 	       ext=.gz; else ext=; fi; \
 	    for f in `ls $$elt$$ext $$elt-[1-9]$$ext $$elt-[1-9][0-9]$$ext 2>/dev/null`; do \
